# text2sql-assistant

./: .gitignore  README.md  pyproject.toml
app/: README.md  streamlit_app.py
data/: sample_text2sql.jsonl
legacy/: README.md
legacy/A2/: README.md  importData.py  q6_combined.py
legacy/A4/: README.md  build_dataset.py  test.py
legacy/A4/A4/: README.md  build_dataset.py  todo
legacy/A4/A4/Classification/: a4_experiment.py  dataset.py
legacy/A4/A4/data/: atis.json
legacy/A4/Classification/FFN/: FFN.py  FFN_train_query_split.py  FFN_train_question_split.py  best_ffn_model_query.pt  ffn_evaluation_results.json
legacy/A4/Classification/LSTM/: LSTM_train_query_split.py  LSTM_train_question_split.py
legacy/A4/Classification/Linear/: Linear_best_query_model.pt  Linear_best_question_model.pt  Linear_train_question_split.py  linear.py  test.py
legacy/A4/Classification/Transformer/: Transformer_train_query_split.py  Transformer_train_question_split.py
legacy/A4/Generation/: utils.py
legacy/A4/Generation/LSTM/: LSTM_train_query_split.py  LSTM_train_question_split.py  lstm_seq2seq.py
legacy/A4/Generation/LSTM_with_attention/: LSTM_with_attention_train_query_split.py  LSTM_with_attention_train_question_split.py  lstm_attention_seq2seq.py
legacy/A4/LLM/: Prompt_fixed.py  generation_test.jsonl  run_model.py  task3_fixed.ipynb
legacy/A4/LLM/query/: LLM_query.ipynb  (+2 more)
legacy/A4/data/: atis-fields.txt
scripts/: demo.py  evaluate.py  preprocess.py
src/text2sql_assistant/: __init__.py  a4_models.py  baseline_a2.py  common.py  data.py  pipeline.py  types.py
(+54 files in other folders)
