[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql-assistant"
version = "0.1.0"
description = "A compact Text2SQL demo that combines baseline retrieval and A4-style adapters."
requires-python = ">=3.10"
dependencies = ["streamlit>=1.37"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
